...
          />
        </SettingsSection>

        <SettingsSection title={t("accountActionsSectionTitle")}>
          <SettingsRow
            title={t("logOut")}
            testID="account-logout-row"
            onPress={state.handleLogout}
            showChevron={false}
          />
          <SettingsRow
            title={t("deleteAccount")}
            testID="account-delete-account-row"
...
