appId: com.lkurczab.fitaly
---
- runFlow: login.yaml
- tapOn:
    id: tab-add-meal
- assertVisible:
    id: meal-add-option-manual
- tapOn:
    id: meal-add-option-manual
- tapOn:
    id: review-meal-save-button
- assertVisible:
    id: tab-home
