appId: com.lkurczab.fitaly
env:
  E2E_EMAIL: e2e@example.com
  E2E_PASSWORD: password123
---
- launchApp
- openLink: fitaly://e2e/reset?logout=0
- runFlow:
    when:
      visible:
        id: login-email-input
    commands:
      - tapOn:
          id: login-email-input
      - eraseText
      - inputText: ${E2E_EMAIL}
      - tapOn:
          id: login-password-input
      - eraseText
      - inputText: ${E2E_PASSWORD}
      - tapOn:
          id: login-submit-button
- assertVisible:
    id: tab-home
